# app_builder

./: README.md  pyproject.toml
agent/: graph.py
agent/generated_project/: app.js  index.html  styles.css
generated_project/: README.md  app.js  index.html  styles.css
