[project]
name = "coder-buddy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faiss-cpu>=1.13.2",
    "globals>=0.3.36",
    "groq>=0.31.0",
    "langchain>=0.3.27",
    "langchain-community>=0.4.1",
    "langchain-core>=0.3.72",
    "langchain-groq>=0.3.7",
    "langgraph>=0.6.3",
    "pip>=25.2",
    "pydantic>=2.11.7",
    "pypdf>=6.5.0",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.2.0",
]
